<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/op2"
    tools:context=".OptionActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="750dp"
        android:layout_marginBottom="307dp"
        android:background="@null"
        android:src="@drawable/backbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="332dp"
        android:layout_height="290dp"
        android:background="@drawable/option_background"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/speed_txt"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/speedRadioGroup">

                <RadioButton
                    android:id="@+id/lawCkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low_txt"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/mediumCkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium_txt"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/highCkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_txt"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/music_txt"
            android:textColor="#D5D5D5"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/musicRadioGroup">

                <RadioButton
                    android:id="@+id/onCkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on_txt"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/offCkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off_txt"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RadioGroup>



        </LinearLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:backgroundTint="#04467A"
            android:text="@string/savebtn_txt"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="10dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>