<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:background="@drawable/rounded_corner"
    >

    <ImageButton
        android:id="@+id/closeButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/close" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/press_start_2p"
        android:gravity="center"
        android:text="@string/gamePaused_txt"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <Button
        android:id="@+id/resumeButton"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/resume_btn"
        android:elevation="20dp"
        android:fontFamily="@font/nosifer"
        android:text="@string/resume_txt"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/quitButton2"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/quite_btn"
        android:fontFamily="@font/nosifer"
        android:text="@string/quite_txt"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="15dp" />
</LinearLayout>
