<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/MainActivity"
    android:gravity="center"
    android:background="@drawable/mainback4"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/startbtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/start_btn"
            android:elevation="20dp"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/start_txt"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:cornerRadius="15dp"
            app:strokeColor="#FFA68A"
            app:strokeWidth="5dp" />

        <Button
            android:id="@+id/settingbtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/option_btn"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/option_txt"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:cornerRadius="15dp"
            app:strokeColor="#8597FF"
            app:strokeWidth="5dp" />

        <Button
            android:id="@+id/quitebtn"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:backgroundTint="@color/quite_btn"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/quite_txt"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:cornerRadius="15dp"
            app:strokeColor="#FF85AF"
            app:strokeWidth="5dp" />


    </LinearLayout>

</RelativeLayout>